<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Media Player</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>

    <!-- Player -->
    <string name="artist_name">Artist</string>
    <string name="song_title">Title</string>
    <string name="album_name">Album</string>
    <string name="separator">:</string>
    <string name="no_song_selected">No song selected</string>
    <string name="content_description_previous">Previous</string>
    <string name="content_description_rewind">Rewind</string>
    <string name="content_description_pause">Pause</string>
    <string name="content_description_stop">Stop</string>
    <string name="content_description_mute">Mute</string>
    <string name="content_description_play">Play</string>
    <string name="content_description_equalizer">Equalizer</string>
    <string name="content_description_visualization">Visualization</string>
    <string name="content_description_library">Library</string>
    <string name="content_description_forward">Forward</string>
    <string name="content_description_next">Next song</string>
    <string name="content_description_shuffle">Shuffle Playlist</string>
    <string name="content_description_repeat">Repeat song</string>
    <string name="default_time">0:00</string>
	<string name="time_separator">/</string>
	<string name="content_description_album_art">Album Art</string>
	<string name="repeat_song">Repeat song</string>
	<string name="repeat_all">Repeat all</string>
	<string name="repeat_off">Repeat off</string>
	<string name="shuffle_on">Shuffle on</string>
	<string name="shuffle_off">Shuffle off</string>
	<string name="end_of_list">Reaching end of list.</string>
	
	<!-- Equalizer -->
	<string name="equalizer_title">Equalizer</string>
	<string name="equalizer_master_gain">Master Gain</string>
	
	<!-- Visualization -->
	<string name="visualization_title">Visualization</string>
	
	<!-- Library -->	
    <string name="library_title">Library</string>
    <string name="library_back">Back</string>
    <string name="library_category">category</string>
    <string-array name="category_list">
		<item>Artist</item>
		<item>Album</item>
		<item>Song</item>
		<item>Genre</item>
		<item>Playlist</item>        
    </string-array>
</resources>